# OthelloGameAgent

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Environement  README.md  install.sh  makefile  run.sh  test.sh
.github/workflows/: cmake.yml
Agent/: Agent  main.cpp
AgentM/: main.cpp
BaseAgent/: BaseAgent
BaseAgent/src/: CMakeLists.txt
codeEnv/: CMakeLists.txt  Env  main.cpp
src/Agent/: CMakeLists.txt  agent.cpp  agent.h  main.cpp
src/AgentBack/: CMakeLists.txt  agent_back.cpp  main.cpp
src/BaseAgent/: CMakeLists.txt  base_agent.cpp
src/BaseAgentBack/: CMakeLists.txt
src/codeEnv/: CMakeLists.txt
tests/: CMakeLists.txt  benchmark.sh  config.txt  test.sh  test_agent.cpp  test_agent.sh  test_othello_game.sh.in  train.sh
